@@ -4,10 +4,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.apache.logging.log4j.util.Strings;
 import org.edupro.web.constant.BackEndUrl;
-import org.edupro.web.model.request.MapelRequest;
-import org.edupro.web.model.response.MapelResponse;
+import org.edupro.web.model.request.TahunAjaranRequest;
 import org.edupro.web.model.response.Response;
-import org.edupro.web.service.MasterMapelService;
+import org.edupro.web.model.response.TahunAjaranResponse;
+import org.edupro.web.service.TahunAjaranService;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
@@ -17,38 +17,82 @@ import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
-public class MasterMapelServiceImpl implements MasterMapelService {
+public class TahunAjaranServiceImpl implements TahunAjaranService {
+
     private final BackEndUrl backEndUrl;
     private final RestTemplate restTemplate;
     private final ObjectMapper objectMapper;
 
     @Override
-    public List<MapelResponse> get() {
+    public List<TahunAjaranResponse> get() {
         try {
-            var url = backEndUrl.mapelUrl();
+            var url = backEndUrl.tahunAjaranUrl();
             ResponseEntity<Response> response = restTemplate.getForEntity(url, Response.class);
             if (response.getStatusCode() == HttpStatus.OK) {
-                return (List<MapelResponse>) response.getBody().getData();
+                return (List<TahunAjaranResponse>) response.getBody().getData();
             }
-        }catch (RestClientException e){
+        }catch (RestClientException e) {
             return Collections.emptyList();
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
-    public Optional<MapelResponse> getById(String id) {
+    public Optional<TahunAjaranResponse> getById(String id) {
         try {
-            var url = Strings.concat(backEndUrl.mapelUrl(), "/"+ id);
+            var url = Strings.concat(backEndUrl.tahunAjaranUrl(), "/" + id);
             ResponseEntity<Response> response = restTemplate.getForEntity(url, Response.class);
             if (response.getStatusCode() == HttpStatus.OK) {
                 byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
+                TahunAjaranResponse result = objectMapper.readValue(json, TahunAjaranResponse.class);
+
+                return Optional.of(result);
+            }
+        }catch (RestClientException e){
+            return Optional.empty();
+        }catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        return Optional.empty();
+    }
+
+    @Override
+    public Optional<TahunAjaranResponse> save(TahunAjaranRequest request) {
+        try {
+            var url = backEndUrl.tahunAjaranUrl();
+            HttpEntity<TahunAjaranRequest> httpEntity = new HttpEntity<>(request);
+            ResponseEntity<Response> response = restTemplate.postForEntity(url, httpEntity, Response.class);
+            if (response.getStatusCode() == HttpStatus.OK) {
+                byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
+                TahunAjaranResponse result = objectMapper.readValue(json, TahunAjaranResponse.class);
+                return Optional.of(result);
+            }
+        }catch (RestClientException e){
+            return Optional.empty();
+        } catch (IOException e){
+            throw new RuntimeException(e);
+        }
+
+        return Optional.empty();
+    }
+
+    @Override
+    public Optional<TahunAjaranResponse> update(TahunAjaranRequest request, String id) {
+        try {
+            var url = Strings.concat(backEndUrl.tahunAjaranUrl(), "/" + id);
+            HttpEntity<TahunAjaranRequest> httpEntity = new HttpEntity<>(request);
+            ResponseEntity<Response> response = restTemplate.exchange(url, HttpMethod.PUT, httpEntity, Response.class);
+            if (response.getStatusCode() == HttpStatus.OK) {
+                byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
+                TahunAjaranResponse result = objectMapper.readValue(json, TahunAjaranResponse.class);
 
                 return Optional.of(result);
             }
@@ -62,57 +106,22 @@ public class MasterMapelServiceImpl implements MasterMapelService {
     }
 
     @Override
-    public Optional<MapelResponse> save(MapelRequest request) {
+    public Optional<TahunAjaranResponse> delete(String id) {
         try {
-            var url = backEndUrl.mapelUrl();
-            HttpEntity<MapelRequest> httpEntity = new HttpEntity<>(request);
-            ResponseEntity<Response> response = restTemplate.postForEntity( url, httpEntity, Response.class);
+            var url = Strings.concat(backEndUrl.tahunAjaranUrl(), "/" + id);
+            ResponseEntity<Response> response = restTemplate.exchange(url, HttpMethod.DELETE, null,Response.class);
             if (response.getStatusCode() == HttpStatus.OK) {
                 byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
+                TahunAjaranResponse result = objectMapper.readValue(json, TahunAjaranResponse.class);
+
                 return Optional.of(result);
             }
         }catch (RestClientException e){
             return Optional.empty();
-        }catch (IOException e){
+        } catch (IOException e){
             throw new RuntimeException(e);
         }
-        return Optional.empty();
-    }
 
-    @Override
-    public Optional<MapelResponse> update(MapelRequest request, String id) {
-        try {
-            var url = Strings.concat(backEndUrl.mapelUrl(), "/"+ id);
-            HttpEntity<MapelRequest> httpEntity = new HttpEntity<>(request);
-            ResponseEntity<Response> response = restTemplate.exchange( url, HttpMethod.PUT, httpEntity, Response.class);
-            if (response.getStatusCode() == HttpStatus.OK) {
-                byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
-            }
-        }catch (RestClientException e){
-            return Optional.empty();
-        }catch (IOException e){
-            throw new RuntimeException(e);
-        }
-        return Optional.empty();
-    }
-
-    @Override
-    public Optional<MapelResponse> delete(String id) {
-        try {
-            var url = Strings.concat(backEndUrl.mapelUrl(), "/"+ id);
-            ResponseEntity<Response> response = restTemplate.exchange(url, HttpMethod.DELETE, null, Response.class);
-            if (response.getStatusCode() == HttpStatus.OK) {
-                byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
-                return Optional.of(result);
-            }
-        }catch (RestClientException e){
-            return Optional.empty();
-        }catch (IOException e){
-            throw new RuntimeException(e);
-        }
         return Optional.empty();
     }
 }
